[tool.poetry]
name = "csinspect"
version = "1.0.0"
description = "a Twitter/X bot that replies to CS2 inspect links with a generated screenshot."
authors = ["Hexiro <mail@hexiro.me>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tweepy = { extras = ["async"], version = "^4.14.0" }
httpx = "^0.27.2"
redis = "^5.0.8"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sentry-sdk = "^2.13.0"
aiohttp = "^3.10.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
mypy = "^1.11.2"
isort = "^5.13.2"
black = "^24.8.0"
types-redis = "^4.6.0.20240819"
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 121
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 121
combine_as_imports = true
combine_star = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true

[tool.ruff]
select = ["ANN", "TCH", "RUF", "SIM", "N", "S", "B", "A", "C4", "EM", "INP", "PIE", "SIM", "ERA", "TRY", "TID", "F"]
ignore = ["A003"]  # attributes with the same name as builtins is okay  

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
